update import map

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             "react-dom/client": "https://esm.sh/react-dom/client",
             "htm/react": "https://esm.sh/htm/react",
             "three": "https://esm.sh/three",
-            "@react-three/fiber": "https://esm.sh/@react-three/fiber",
+            "@react-three/fiber": "https://esm.sh/@react-three/fiber@8.8.1",
             "@react-three/drei": "https://esm.sh/@react-three/drei",
             "@react-three/cannon": "https://esm.sh/@react-three/cannon@6.3.0",
             "react-to-webcomponent": "https://esm.sh/react-to-webcomponent",
