--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             "htm/react": "https://esm.sh/htm/react",
             "three": "https://esm.sh/three",
             "@react-three/fiber": "https://esm.sh/@react-three/fiber@8.8.1",
-            "@react-three/drei": "https://esm.sh/@react-three/drei",
+            "@react-three/drei": "https://esm.sh/@react-three/drei@9.32.0",
             "@react-three/cannon": "https://esm.sh/@react-three/cannon@6.3.0",
             "react-to-webcomponent": "https://esm.sh/react-to-webcomponent",
             "zustand": "https://esm.sh/zustand",
